use read write lock for parallel reads